--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 
 <!-- Hack or Snooze
-
-     This is the only HTML page; the applications manipulates this DOM
-     during use.
-
-     Primary authors:
-     - Michael Hueter: initial creation, 2018
-     - Elie Schoppik: refactoring using OO, 2019
-     - Joel Burton: refactored and componentized, 2020
-     - You!
   -->
 
 <html lang="en">
@@ -105,7 +96,7 @@
     <hr>
   </form>
 
-  <!-- Signup form -->
+  <!-- form to sign up -->
   <form
       action="#"
       id="signup-form"
@@ -129,6 +120,7 @@
 </section>
 
 <!-- User profile -->
+
 <section id="user-profile" class="hidden">
   <div class="user-profile-box container">
     <h4>User Profile Info</h4>
@@ -141,6 +133,7 @@
 </section>
 
 <!-- Library JS & our JS -->
+
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
