Can now login and post stories minor edits

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 
 <!-- Hack or Snooze
+
+     This is the only HTML page; the applications manipulates this DOM
+     during use.
+
+     Primary authors:
+     - Michael Hueter: initial creation, 2018
+     - Elie Schoppik: refactoring using OO, 2019
+     - Joel Burton: refactored and componentized, 2020
+     - You!
   -->
 
 <html lang="en">
@@ -29,12 +38,14 @@
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
   <div class="main-nav-links hidden">
-    |
-    <a class="nav-link" href="#" id="nav-submit-story">submit</a>
-    |
-    <a class="nav-link" href="#" id="nav-favorites">favorites</a>
-    |
-    <a class="nav-link" href="#" id="nav-my-stories">my&nbsp;stories</a>
+    <span>  | </span>
+    <a href="#" class="nav-link" id="submit-story">Submit</a>
+    <span> | </span>
+    <a href="#" class="nav-link" id="favorites">Favorites</a>
+    <span> | </span>
+    <a href="#" class="nav-link" id="my-stories">My Stories</a>
+    <span> | </span>
+
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -44,25 +55,7 @@
 </nav>
 
 <!-- area for stories (all stories, user stories, favorites) -->
-<section id="stories-container" class="stories-container container">
-
-  <!-- form for submitted new story -->
-  <form action="" class="hidden" id="submit-form">
-    <div>
-      <label for="create-author">author</label>
-      <input id="create-author" required placeholder="author name">
-    </div>
-    <div>
-      <label for="create-title">title</label>
-      <input id="create-title" required placeholder="story title">
-    </div>
-    <div>
-      <label for="create-url">url</label>
-      <input id="create-url" required type="url" placeholder="story url">
-    </div>
-    <button type="submit">submit</button>
-    <hr>
-  </form>
+<section class="stories-container container">
 
   <!-- loading message (removed by JS after stories loaded) -->
   <div id="stories-loading-msg">Loading&hellip;</div>
@@ -70,33 +63,48 @@
   <!-- List of all stories -->
   <ol id="all-stories-list" class="stories-list"></ol>
 
-  <!-- List of stories favorited by the user -->
-  <ol id="favorited-stories" class="hidden stories-list"></ol>
-
-  <!-- List of stories by the user -->
-  <ol id="my-stories" class="hidden stories-list"></ol>
-
 </section>
 
-<!-- Login and signup forms -->
+<!-- addStory, login, and signup forms -->
 <section class="account-forms-container container">
+
+
+
+  <!-- submit story form -->
+  <form action="#" id="submit-story-form" class="account-form hidden">
+    <h4>Submit a Story</h4>
+    <div class="story-input">
+      <label for="story-author">Author</label>
+      <input id="story-author" placeholder="author name">
+    </div>
+    <div class="story-input">
+      <label for="story-title">Title</label>
+      <input id="story-title" type="text" placeholder="story title">
+    </div>
+    <div class="story-input">
+      <label for="story-url">Url</label>
+      <input id="story-url" type="url" placeholder="story url">
+    </div>
+    <button type="submit">Submit</button>
+    <hr>
+  </form> 
 
   <!-- Login form -->
   <form action="#" id="login-form" class="account-form hidden" method="post">
     <h4>Login</h4>
     <div class="login-input">
       <label for="login-username">username</label>
-      <input id="login-username" autocomplete="current-username">
+      <input id="login-username" autocomplete="current-username" required>
     </div>
     <div class="login-input">
       <label for="login-password">password</label>
-      <input id="login-password" type="password" autocomplete="current-password">
+      <input id="login-password" type="password" autocomplete="current-password" required>
     </div>
     <button type="submit">login</button>
     <hr>
   </form>
 
-  <!-- form to sign up -->
+  <!-- Signup form -->
   <form
       action="#"
       id="signup-form"
@@ -105,35 +113,21 @@
     <h4>Create Account</h4>
     <div class="login-input">
       <label for="signup-name">name</label>
-      <input id="signup-name" autocapitalize="words">
+      <input id="signup-name" autocapitalize="words" required>
     </div>
     <div class="login-input">
       <label for="signup-username">username</label>
-      <input id="signup-username" autocomplete="new-username">
+      <input id="signup-username" autocomplete="new-username" required>
     </div>
     <div class="login-input">
       <label for="signup-password">password</label>
-      <input id="signup-password" autocomplete="new-password" type="password">
+      <input id="signup-password" autocomplete="new-password" type="password" required>
     </div>
     <button type="submit">create account</button>
   </form>
 </section>
 
-<!-- User profile -->
-
-<section id="user-profile" class="hidden">
-  <div class="user-profile-box container">
-    <h4>User Profile Info</h4>
-    <section>
-      <div>Name: <span id="profile-name">Name:</span></div>
-      <div>Username: <span id="profile-username">Username:</span></div>
-      <div>Account Created: <span id="profile-account-date"></span></div>
-    </section>
-  </div>
-</section>
-
 <!-- Library JS & our JS -->
-
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
